--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<br>
+<p>This is Paul.</p>
+<p>I'm hosted with GitHub Pages now.</p>
+<p>I can now share my web work!</p>
 </body>
 </html>
