--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
-<!DOCTYPE html>
-<html>
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <title>PPettersen Portfolio</title>
+
+    <!-- Custom CSS -->
+    <link href="css/pauls.css" rel="stylesheet">
+    <!-- Fonts -->
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
+
+</head>
 <body>
-<h1>Hello World</h1>
-<br>
-<p>This is Paul.</p>
-<p>I'm hosted with GitHub Pages now.</p>
-<p>I can now share my web work!</p>
+        <div class="brand">I&#39;m Paul</div>
+        <div class="about-bar">I love coding and creating.</div>
+        <div class="more">
+            <a class="read-now-link" href="#">read more</a>
+        </div>
+
+         
+    <div class="row">
+        <div class="box">
+            <div class="col-lg-12">
+                <hr>
+                    <h2 class="intro-text text-center">
+                        Beautiful boxes
+                        <strong>to showcase your content</strong>
+                    </h2>
+                <hr>
+                <p>Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+            </div>             
+        </div>
+    </div>   
+
 </body>
 </html>
