More of my text and corrected smaller screen CSS.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,39 @@
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
 
+<!--<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">-->
+<!--<script>
+    $(function () {
+        $("input").button({
+            icons: {
+                primary: ".ui-icon-clock"
+            },
+            text: false
+        })
+    });
+    </script>-->
 </head>
 <body>
+    <header>
+       
+<!--  <div data-role="main" class="ui-content">
+    <ul data-role="listview" data-inset="true">    
+      <li data-icon="refresh"><a href="#">Refresh Page</a></li> 
+      <li data-icon="search"><a href="#">Search Page</a></li>
+    </ul>
+  </div>-->
+
+<!--        <ul class="menu" data-inset="true">
+            <li><a href="http://salleedesign.com/home/">Home</a></li>    
+            <li><a href="http://salleedesign.com/portfolio/">Work</a></li>    
+            <li><a href="http://salleedesign.com/blog/">Blog</a></li>    
+            <li><a href="http://salleedesign.com/photography/">Pics</a></li> 
+  
+            <li><a href="https://www.linkedin.com/in/ppettersen26"></a></li>
+        </ul>-->
+    </header>
         <div class="brand">I&#39;m Paul</div>
-        <div class="about-bar">I love coding and creating.</div>
+        <div class="about-bar">I love creating and coding!</div>
         <div class="more">
             <a class="read-now-link" href="#">read more</a>
         </div>
@@ -28,12 +57,24 @@
             <div class="col-lg-12">
                 <hr>
                     <h2 class="intro-text text-center">
-                        Beautiful boxes
-                        <strong>to showcase your content</strong>
+                        My name is Paul Pettersen
+                        <strong>and I love to create. </strong>
                     </h2>
                 <hr>
-                <p>Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                <p>I am an experienced programming professional from Chicago, but that is not the limit to my skills. 
+                   I have worked as a professional chef and did freelance photography thru college.  
+                   I never seem to go far from any of these three specialties. </p>
+                <p class ="centerimg">
+                    <img  src="img/Chef.png" alt="Chef" />                     
+                </p>
+                <p>While working on my first bachelor’s degree in computer science, 
+                    I was doing a lot of landscape photography, team pictures and even wedding photography. 
+                    After graduation, I was hired by Allstate Insurance in Life Systems. 
+                    I worked my way up there to a Senior Staff Programmer. I did not just program. 
+                    I started training under a professional chef in Chicago, Cleatis Wilcox, 
+                    the first certified female chef in the Midwest.  Cooking must be in my blood! 
+                    My family even includes a chef who worked at the American Embassy in Oslo, Norway! 
+                    After marrying I moved to Michigan where I cooked professionally and did IT consulting work. </p>
             </div>             
         </div>
     </div>   
