End of day work. Most of page 1 done.

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         <div class="brand">I&#39;m Paul</div>
         <div class="about-bar">I love creating and coding!</div>
         <div class="more">
-            <a class="read-now-link" href="#">read more</a>
+            <a class="read-now-link" href="#more">read more</a>
         </div>
 
          
-    <div class="row">
+    <div class="row" id="more">
         <div class="box">
             <div class="col-lg-12">
                 <hr>
@@ -75,6 +75,20 @@
                     the first certified female chef in the Midwest.  Cooking must be in my blood! 
                     My family even includes a chef who worked at the American Embassy in Oslo, Norway! 
                     After marrying I moved to Michigan where I cooked professionally and did IT consulting work. </p>
+                <p>Computers were never far from my mind either. 
+                    I worked on methods of storing my vast library of recipes. 
+                    I also needed ways to calculate portions and nutritional values because of family food allergies 
+                    and my work as a sous chef at a retirement home. A lot of my work was done with Visual Basic, 
+                    stand-alone apps and Excel macros. . In the kitchen I worked on inventory, scheduling and ordering 
+                    systems. I also helped set up a network for a medical practice and a database for a 
+                    local horticultural therapy farm where I was their volunteer coordinator.</p>
+                <p class ="centerimg">
+                    <img  src="img/Dead river.png" alt="River" />
+                    <img  src="img/Pancakes.jpg" alt="Pancakes" />                     
+                </p>
+                <p>I used my photography to document recipes and cooking methods. I have always have enjoyed landscape 
+                    and close-up work. This came in handy to document my work. 
+                    I used to have a dark room but now my dark room is my keyboard using Photoshop. </p>
             </div>             
         </div>
     </div>   
