All page linkage added.

--- a/pics.html
+++ b/pics.html
@@ -29,7 +29,7 @@
        </div>     
     </header>
 
-    <div class="brand">Contact Page</div>
+    <div class="brand">Pics Page</div>
     <!--<div class="about-bar">I love creating and coding!</div>
     <div class="more">
         <a class="read-now-link" href="#more">read more</a>
