--- a/index.html
+++ b/index.html
@@ -10,55 +10,38 @@
 
     <!-- Custom CSS -->
     <link href="css/pauls.css" rel="stylesheet">
-    <!-- Fonts -->
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
 
-<!--<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">-->
-<!--<script>
-    $(function () {
-        $("input").button({
-            icons: {
-                primary: ".ui-icon-clock"
-            },
-            text: false
-        })
-    });
-    </script>-->
 </head>
 <body>
     <header>
-       
-<!--  <div data-role="main" class="ui-content">
-    <ul data-role="listview" data-inset="true">    
-      <li data-icon="refresh"><a href="#">Refresh Page</a></li> 
-      <li data-icon="search"><a href="#">Search Page</a></li>
-    </ul>
-  </div>-->
-
-<!--        <ul class="menu" data-inset="true">
-            <li><a href="http://salleedesign.com/home/">Home</a></li>    
-            <li><a href="http://salleedesign.com/portfolio/">Work</a></li>    
-            <li><a href="http://salleedesign.com/blog/">Blog</a></li>    
-            <li><a href="http://salleedesign.com/photography/">Pics</a></li> 
-  
-            <li><a href="https://www.linkedin.com/in/ppettersen26"></a></li>
-        </ul>-->
+        <div class="box">
+                <ul class="menu" data-inset="true">
+                    <li><a href="index.html">Home</a></li>
+                    <li></li>    
+                    <li><a href="work.html">Work</a></li>
+                    <li></li>
+                    <li><a href="pics.html">Pics</a></li>
+                    <li></li> 
+                    <li><a href="contact.html">Contact</a></li>
+                    <li></li>
+                    <li><a href="https://www.linkedin.com/in/ppettersen26"><img  src="img/in.png" alt="LinkedIn" /></a></li>
+                </ul>
+       </div>     
     </header>
-        <div class="brand">I&#39;m Paul</div>
-        <div class="about-bar">I love creating and coding!</div>
-        <div class="more">
-            <a class="read-now-link" href="#more">read more</a>
-        </div>
 
+    <div class="brand">I&#39;m Paul</div>
+    <div class="about-bar">I love creating and coding!</div>
+    <div class="more">
+        <a class="read-now-link" href="#more">read more</a>
+    </div>
          
     <div class="row" id="more">
         <div class="box">
             <div class="col-lg-12">
                 <hr>
-                    <h2 class="intro-text text-center">
-                        My name is Paul Pettersen
-                        <strong>and I love to create. </strong>
+                    <h2 class="intro-text">
+                        <strong>My name is Paul Pettersen
+                        and I love to create. </strong>
                     </h2>
                 <hr>
                 <p>I am an experienced programming professional from Chicago, but that is not the limit to my skills. 
