Pic buttons using jquery

--- a/about.html
+++ b/about.html
@@ -22,14 +22,16 @@
                     <li></li>
                     <li><a href="pics.html">Pics</a></li>
                     <li></li> 
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li></li>
                     <li><a href="https://www.linkedin.com/in/ppettersen26"><img  src="img/in.png" alt="LinkedIn" /></a></li>
+                    <li></li>
+                    <li><a href="https://500px.com/paulpettersen"><img  src="img/500px.png" alt="500px" /></a></li>
                 </ul>
        </div>     
     </header>
 
-    <div class="brand">Contact Page</div>
+    <div class="brand">A bit more about me.</div>
     <!--<div class="about-bar">I love creating and coding!</div>
     <div class="more">
         <a class="read-now-link" href="#more">read more</a>
@@ -73,7 +75,9 @@
                     and close-up work. This came in handy to document my work. 
                     I used to have a dark room but now my dark room is my keyboard using Photoshop. </p>
             </div>             -->
-            Under construction</div>
+            If you wish to contact me with feedback or would like a complete resume,
+            I can be reached at <a href="mailto:ppettersen26@gmail.com">ppettersen26@gmail.com</a>
+        </div>
     </div>   
 
 </body>
