--- a/index.html
+++ b/index.html
@@ -10,23 +10,26 @@
 
     <!-- Custom CSS -->
     <link href="css/pauls.css" rel="stylesheet">
-
 </head>
 <body>
     <header>
         <div class="box">
-                <ul class="menu" data-inset="true">
-                    <li><a href="index.html">Home</a></li>
-                    <li></li>    
-                    <li><a href="work.html">Work</a></li>
-                    <li></li>
-                    <li><a href="pics.html">Pics</a></li>
-                    <li></li> 
-                    <li><a href="contact.html">Contact</a></li>
-                    <li></li>
-                    <li><a href="https://www.linkedin.com/in/ppettersen26"><img  src="img/in.png" alt="LinkedIn" /></a></li>
-                </ul>
-       </div>     
+            <ul class="menu" data-inset="true">
+                <li><a href="index.html">Home</a></li>
+                <li></li>
+                <li><a href="work.html">Work</a></li>
+                <li></li>
+                <li><a href="pics.html">Pics</a></li>
+                <li></li>
+                <li><a href="about.html">About</a></li>
+                <li></li>
+                <li><a href="https://www.linkedin.com/in/ppettersen26">
+                    <img src="img/in.png" alt="LinkedIn" /></a></li>
+                <li></li>
+                <li><a href="https://500px.com/paulpettersen">
+                    <img src="img/500px.png" alt="500px" /></a></li>
+            </ul>
+        </div>
     </header>
 
     <div class="brand">I&#39;m Paul</div>
@@ -34,47 +37,55 @@
     <div class="more">
         <a class="read-now-link" href="#more">read more</a>
     </div>
-         
+
     <div class="row" id="more">
         <div class="box">
             <div class="col-lg-12">
                 <hr>
-                    <h2 class="intro-text">
-                        <strong>My name is Paul Pettersen
+                <h2 class="intro-text">
+                    <strong>My name is Paul Pettersen
                         and I love to create. </strong>
-                    </h2>
+                </h2>
                 <hr>
-                <p>I am an experienced programming professional from Chicago, but that is not the limit to my skills. 
+                <p>
+                    I am an experienced programming professional from Chicago, but that is not the limit to my skills. 
                    I have worked as a professional chef and did freelance photography thru college.  
-                   I never seem to go far from any of these three specialties. </p>
-                <p class ="centerimg">
-                    <img  src="img/Chef.png" alt="Chef" />                     
+                   I never seem to go far from any of these three specialties.
                 </p>
-                <p>While working on my first bachelor’s degree in computer science, 
+                <p class="centerimg">
+                    <img src="img/Chef.png" alt="Chef" />
+                </p>
+                <p>
+                    While working on my first bachelor’s degree in computer science, 
                     I was doing a lot of landscape photography, team pictures and even wedding photography. 
                     After graduation, I was hired by Allstate Insurance in Life Systems. 
                     I worked my way up there to a Senior Staff Programmer. I did not just program. 
                     I started training under a professional chef in Chicago, Cleatis Wilcox, 
                     the first certified female chef in the Midwest.  Cooking must be in my blood! 
                     My family even includes a chef who worked at the American Embassy in Oslo, Norway! 
-                    After marrying I moved to Michigan where I cooked professionally and did IT consulting work. </p>
-                <p>Computers were never far from my mind either. 
+                    After marrying I moved to Michigan where I cooked professionally and did IT consulting work.
+                </p>
+                <p>
+                    Computers were never far from my mind either. 
                     I worked on methods of storing my vast library of recipes. 
                     I also needed ways to calculate portions and nutritional values because of family food allergies 
                     and my work as a sous chef at a retirement home. A lot of my work was done with Visual Basic, 
                     stand-alone apps and Excel macros. . In the kitchen I worked on inventory, scheduling and ordering 
                     systems. I also helped set up a network for a medical practice and a database for a 
-                    local horticultural therapy farm where I was their volunteer coordinator.</p>
-                <p class ="centerimg">
-                    <img  src="img/Dead river.png" alt="River" />
-                    <img  src="img/Pancakes.jpg" alt="Pancakes" />                     
+                    local horticultural therapy farm where I was their volunteer coordinator.
                 </p>
-                <p>I used my photography to document recipes and cooking methods. I have always have enjoyed landscape 
+                <p class="centerimg">
+                    <img src="img/Dead river.png" alt="River" />
+                    <img src="img/Pancakes.jpg" alt="Pancakes" />
+                </p>
+                <p>
+                    I used my photography to document recipes and cooking methods. I have always have enjoyed landscape 
                     and close-up work. This came in handy to document my work. 
-                    I used to have a dark room but now my dark room is my keyboard using Photoshop. </p>
-            </div>             
+                    I used to have a dark room but now my dark room is my keyboard using Photoshop.
+                </p>
+            </div>
         </div>
-    </div>   
+    </div>
 
 </body>
 </html>
