--- a/work.html
+++ b/work.html
@@ -15,17 +15,19 @@
 <body>
     <header>
         <div class="box">
-                <ul class="menu" data-inset="true">
-                    <li><a href="index.html">Home</a></li>
-                    <li></li>    
-                    <li><a href="work.html">Work</a></li>
-                    <li></li>
-                    <li><a href="pics.html">Pics</a></li>
-                    <li></li> 
-                    <li><a href="contact.html">Contact</a></li>
-                    <li></li>
-                    <li><a href="https://www.linkedin.com/in/ppettersen26"><img  src="img/in.png" alt="LinkedIn" /></a></li>
-                </ul>
+            <ul class="menu" data-inset="true">
+                <li><a href="index.html">Home</a></li>
+                <li></li>    
+                <li><a href="work.html">Work</a></li>
+                <li></li>
+                <li><a href="pics.html">Pics</a></li>
+                <li></li> 
+                <li><a href="about.html">About</a></li>
+                <li></li>
+                <li><a href="https://www.linkedin.com/in/ppettersen26"><img  src="img/in.png" alt="LinkedIn" /></a></li>
+                <li></li>
+                <li><a href="https://500px.com/paulpettersen"><img  src="img/500px.png" alt="500px" /></a></li>
+            </ul>
        </div>     
     </header>
 
