Finished page 1 and added footing.

--- a/about.html
+++ b/about.html
@@ -79,6 +79,6 @@
             I can be reached at <a href="mailto:ppettersen26@gmail.com">ppettersen26@gmail.com</a>
         </div>
     </div>   
-
+    <div class="footer">Cooked to order in Michigan by Paul Pettersen</div>
 </body>
 </html>
