--- a/index.html
+++ b/index.html
@@ -79,13 +79,22 @@
                     <img src="img/Pancakes.jpg" alt="Pancakes" />
                 </p>
                 <p>
-                    I used my photography to document recipes and cooking methods. I have always have enjoyed landscape 
-                    and close-up work. This came in handy to document my work. 
-                    I used to have a dark room but now my dark room is my keyboard using Photoshop.
+                    I used my photography to document recipes and cooking methods, 
+                    always having enjoyed landscape and close-up work. 
+                    This came in handy to document culinary prep. Originally I had a dark room 
+                    but now my dark room is my computer using Photoshop where I think I can be 
+                    even more creative.  
                 </p>
+                <p>I think my strengths are how creative I can be, either with graphics, computer 
+                    project design and coding or with culinary dietary design.  
+                    Please browse my Web Portfolio and please feel free to send me comments or 
+                    ask me for any other information. The <a href="about.html">about</a> page 
+                    will provide more professional and contact information.
+                </p>
+                <div class="about-bar">Thank you for visiting. </div>
             </div>
         </div>
     </div>
-
+    <div class="footer">Cooked to order in Michigan by Paul Pettersen</div>
 </body>
 </html>
