--- a/pics.html
+++ b/pics.html
@@ -90,6 +90,7 @@
     </div>
     <div id="p1">
         <div class="box">Landscape
+            <img src="img/Munising Falls.png" />
             <img src="img/Seney.png" alt="Seney"  />
         </div>
     </div>
@@ -108,6 +109,7 @@
             <img src="img/LogFrost.png" />
         </div>
     </div>
+    <div class="footer">Cooked to order in Michigan by Paul Pettersen</div>
     <script>
         $(window).load(function () {
             $(p2).fadeOut();
