--- a/work.html
+++ b/work.html
@@ -77,6 +77,6 @@
             </div>             -->
             Under construction</div>
     </div>   
-
+    <div class="footer">Cooked to order in Michigan by Paul Pettersen</div>
 </body>
 </html>
