Added photoshop logo.

--- a/about.html
+++ b/about.html
@@ -79,6 +79,8 @@
             I can be reached at <a href="mailto:ppettersen26@gmail.com">ppettersen26@gmail.com</a>
         </div>
     </div>   
-    <div class="footer">Cooked to order in Michigan by Paul Pettersen</div>
+        <div class="centerimg">
+            <img src="img/Logo.png" alt="Logo" />            
+    </div>
 </body>
 </html>
