--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     I worked on methods of storing my vast library of recipes. 
                     I also needed ways to calculate portions and nutritional values because of family food allergies 
                     and my work as a sous chef at a retirement home. A lot of my work was done with Visual Basic, 
-                    stand-alone apps and Excel macros. . In the kitchen I worked on inventory, scheduling and ordering 
-                    systems. I also helped set up a network for a medical practice and a database for a 
+                    stand-alone apps through Excel macros. In the kitchen I worked on inventory, scheduling 
+                    and ordering systems. I also helped set up a network for a medical practice and a database for a 
                     local horticultural therapy farm where I was their volunteer coordinator.
                 </p>
                 <p class="centerimg">
@@ -82,10 +82,9 @@
                     I used my photography to document recipes and cooking methods, 
                     always having enjoyed landscape and close-up work. 
                     This came in handy to document culinary prep. Originally I had a dark room 
-                    but now my dark room is my computer using Photoshop where I think I can be 
-                    even more creative.  
+                    but now my dark room is my computer using Photoshop where I can be even more creative.  
                 </p>
-                <p>I think my strengths are how creative I can be, either with graphics, computer 
+                <p>My strengths are how creative I can be, either with graphics, computer 
                     project design and coding or with culinary dietary design.  
                     Please browse my Web Portfolio and please feel free to send me comments or 
                     ask me for any other information. The <a href="about.html">about</a> page 
@@ -95,6 +94,8 @@
             </div>
         </div>
     </div>
-    <div class="footer">Cooked to order in Michigan by Paul Pettersen</div>
+    <div class="centerimg">
+            <img src="img/Logo.png" alt="Logo" />            
+    </div>
 </body>
 </html>
