--- a/pics.html
+++ b/pics.html
@@ -109,7 +109,9 @@
             <img src="img/LogFrost.png" />
         </div>
     </div>
-    <div class="footer">Cooked to order in Michigan by Paul Pettersen</div>
+    <div class="centerimg">
+            <img src="img/Logo.png" alt="Logo" />            
+    </div>
     <script>
         $(window).load(function () {
             $(p2).fadeOut();
