--- a/work.html
+++ b/work.html
@@ -77,6 +77,8 @@
             </div>             -->
             Under construction</div>
     </div>   
-    <div class="footer">Cooked to order in Michigan by Paul Pettersen</div>
+    <div class="centerimg">
+            <img src="img/Logo.png" alt="Logo" />            
+    </div>
 </body>
 </html>
