--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@
        </div>     
     </header>
 
-    <div class="brand">Work Page</div>
+    <div class="brand">Work Samples</div>
     <!--<div class="about-bar">I love creating and coding!</div>
     <div class="more">
         <a class="read-now-link" href="#more">read more</a>
@@ -39,44 +39,37 @@
          
     <div class="row" id="more">
         <div class="box">
-           <!-- <div class="col-lg-12">
+            <div class="col-lg-12">
                 <hr>
                     <h2 class="intro-text">
-                        <strong>My name is Paul Pettersen
-                        and I love to create. </strong>
+                        <strong>A number of projects I have completed.</strong>
                     </h2>
                 <hr>
-                <p>I am an experienced programming professional from Chicago, but that is not the limit to my skills. 
-                   I have worked as a professional chef and did freelance photography thru college.  
-                   I never seem to go far from any of these three specialties. </p>
+                <p>WoodBytes</p>
                 <p class ="centerimg">
-                    <img  src="img/Chef.png" alt="Chef" />                     
+                    <img src="img/WoodBytes.PNG" alt="Wood Bytes" />
                 </p>
-                <p>While working on my first bachelor’s degree in computer science, 
-                    I was doing a lot of landscape photography, team pictures and even wedding photography. 
-                    After graduation, I was hired by Allstate Insurance in Life Systems. 
-                    I worked my way up there to a Senior Staff Programmer. I did not just program. 
-                    I started training under a professional chef in Chicago, Cleatis Wilcox, 
-                    the first certified female chef in the Midwest.  Cooking must be in my blood! 
-                    My family even includes a chef who worked at the American Embassy in Oslo, Norway! 
-                    After marrying I moved to Michigan where I cooked professionally and did IT consulting work. </p>
-                <p>Computers were never far from my mind either. 
-                    I worked on methods of storing my vast library of recipes. 
-                    I also needed ways to calculate portions and nutritional values because of family food allergies 
-                    and my work as a sous chef at a retirement home. A lot of my work was done with Visual Basic, 
-                    stand-alone apps and Excel macros. . In the kitchen I worked on inventory, scheduling and ordering 
-                    systems. I also helped set up a network for a medical practice and a database for a 
-                    local horticultural therapy farm where I was their volunteer coordinator.</p>
+                <p>A Flash Video of my fathers experience in the war.</p>
                 <p class ="centerimg">
-                    <img  src="img/Dead river.png" alt="River" />
-                    <img  src="img/Pancakes.jpg" alt="Pancakes" />                     
+                    <img src="img/Flash movie.PNG" alt="Flash Video"  />
                 </p>
-                <p>I used my photography to document recipes and cooking methods. I have always have enjoyed landscape 
-                    and close-up work. This came in handy to document my work. 
-                    I used to have a dark room but now my dark room is my keyboard using Photoshop. </p>
-            </div>             -->
-            Under construction</div>
-    </div>   
+                <p>A An herbal blend site.</p>
+                <p class ="centerimg">
+                    <img src="img/Cooking with Herbs.PNG" alt="Cooking with Herb Site" />
+                </p>                
+                <p>A woodworkers site.</p>
+                <p class ="centerimg">
+                    <img src="img/Woodworking for everyone.PNG" alt="Woodworking Site" />
+                </p>                
+                <p>The same wood workers site with added Perl functionality</p>
+                <p class ="centerimg">
+                    <img src="img/Woodworking for everyone with Perl.PNG" alt="Woodworking with Perl" />                     
+                </p>
+
+            </div>             
+
+        </div>
+    </div> 
     <div class="centerimg">
             <img src="img/Logo.png" alt="Logo" />            
     </div>
