About page additions

--- a/work.html
+++ b/work.html
@@ -53,7 +53,7 @@
                 <p class ="centerimg">
                     <img src="img/Flash movie.PNG" alt="Flash Video"  />
                 </p>
-                <p>A An herbal blend site.</p>
+                <p>An herbal blend site.</p>
                 <p class ="centerimg">
                     <img src="img/Cooking with Herbs.PNG" alt="Cooking with Herb Site" />
                 </p>                
