Rewrite of index and about pages.

--- a/index.html
+++ b/index.html
@@ -47,49 +47,30 @@
                         and I love to create. </strong>
                 </h2>
                 <hr>
-                <p>
-                    I am an experienced programming professional from Chicago, but that is not the limit to my skills. 
-                   I have worked as a professional chef and did freelance photography thru college.  
-                   I never seem to go far from any of these three specialties.
+                <p>I am an experienced IT professional who loves to create well designed software and
+                   Web designs. I do not only create with a computer, I am also an experienced chef and 
+                    have worked as a freelance photographer. I have many interests, but I’m never very far 
+                    from one of these three.
                 </p>
                 <p class="centerimg">
                     <img src="img/Chef.png" alt="Chef" />
                 </p>
-                <p>
-                    While working on my first bachelor’s degree in computer science, 
-                    I was doing a lot of landscape photography, team pictures and even wedding photography. 
-                    After graduation, I was hired by Allstate Insurance in Life Systems. 
-                    I worked my way up there to a Senior Staff Programmer. I did not just program. 
-                    I started training under a professional chef in Chicago, Cleatis Wilcox, 
-                    the first certified female chef in the Midwest.  Cooking must be in my blood! 
-                    My family even includes a chef who worked at the American Embassy in Oslo, Norway! 
-                    After marrying I moved to Michigan where I cooked professionally and did IT consulting work.
-                </p>
-                <p>
-                    Computers were never far from my mind either. 
-                    I worked on methods of storing my vast library of recipes. 
-                    I also needed ways to calculate portions and nutritional values because of family food allergies 
-                    and my work as a sous chef at a retirement home. A lot of my work was done with Visual Basic, 
-                    stand-alone apps through Excel macros. In the kitchen I worked on inventory, scheduling 
-                    and ordering systems. I also helped set up a network for a medical practice and a database for a 
-                    local horticultural therapy farm where I was their volunteer coordinator.
-                </p>
+                <p>I love to solve problems and have worked on a variety of projects such as solving a 
+                    customer’s database design, created an inventory system for a commercial kitchen, 
+                    customizing recipes for special diets, and photo illustrating a culinary recipe database 
+                    system. I love to design solutions to save work and sites that work well and are easy to 
+                    see with any type of device. I also use my photography for landscapes, culinary 
+                    illustration, and my own creation from Photoshop.</p>
                 <p class="centerimg">
                     <img src="img/Dead river.png" alt="River" />
                     <img src="img/Pancakes.jpg" alt="Pancakes" />
                 </p>
-                <p>
-                    I used my photography to document recipes and cooking methods, 
-                    always having enjoyed landscape and close-up work. 
-                    This came in handy to document culinary prep. Originally I had a dark room 
-                    but now my dark room is my computer using Photoshop where I can be even more creative.  
-                </p>
-                <p>My strengths are how creative I can be, either with graphics, computer 
-                    project design and coding or with culinary dietary design.  
-                    Please browse my Web Portfolio and please feel free to send me comments or 
-                    ask me for any other information. The <a href="about.html">about</a> page 
-                    will provide more professional and contact information.
-                </p>
+                <p><a href="https://www.linkedin.com/in/ppettersen26">LinkedIn</a> profiles a good part 
+                    of my IT career, <a href="https://500px.com/paulpettersen">500PX</a> has a sample of 
+                    my photography (still working on that!) Please browse my Web Portfolio and please 
+                    feel free to send me comments or ask me for any other information. The 
+                    <a href="about.html">about</a> page will provide more about me including contact 
+                    information. </p>
                 <div class="about-bar">Thank you for visiting. </div>
             </div>
         </div>
