--- a/about.html
+++ b/about.html
@@ -39,16 +39,50 @@
          
     <div class="row" id="more">
         <div class="box">
-           <ul>Programming
-                <li>Project lead</li>
-                <li>Requirements Definition</li>
-                <li>Analysis</li>
-                <li>Program design</li>
+           <p>After receiving a Bachelor&#39s degree in computer science at Northeastern Illinois University, 
+               I was hired by Allstate Insurance to work in Life systems. My tasks included:</p>
+               <ul>
+                <li>Project lead, Requirements Definition, Analysis and design</li>
                 <li>Debugging & Troubleshooting</li>
                 <li>Testing & Documentation</li>
-                <li>User Training & Support</li>
+                <li>New employee and User Training & Support</li>
+                <li>Policy exhibit and valuation department</li>
+                <li>Billing and Collections - worked on first electronic funds transfer system with 
+                    Chase Manhattan Bank</li>
+                <li>Programed with COBOL and Assembler on an IBM 370 mainframe</li>
            </ul>
-            <ul>Languages used
+            <p>While working on my first bachelor&#39s degree in computer science, I was doing a lot of 
+                landscape photography, team pictures and even wedding photography. I did not just program 
+                at Allstate either. I started training under a professional chef in Chicago, Cleatis Wilcox, 
+                the first certified female chef in the Midwest. Cooking must be in my blood! My family even 
+                includes a chef who worked at the American Embassy in Oslo, Norway! After marrying I moved to 
+                Michigan where I cooked professionally and also did IT consulting work. </p>
+            <p>My experience as a chef included:</p>
+            <ul>
+                <li>Baker</li>
+                <li>Line Cook in a resort area</li>
+                <li>Prep Cook</li>
+                <li>Sous Chef for a retirement home (Kitchen manager)</li>
+                <li>Recipes developed for special dietary needs.</li>
+            </ul>
+            <p>Computers were never far from my mind either. I worked on methods of storing my vast library
+                 of recipes. I also needed ways to calculate portions and nutritional values because of 
+                special dietary needs. A lot of my work was done with Visual Basic, stand-alone apps through 
+                Excel macros. In the kitchen I worked on inventory, scheduling and ordering systems. 
+                I also helped set up a network for a medical practice and a database for a local horticultural
+                 therapy farm where I was their volunteer coordinator.</p>
+            <p>My volunteer activities included:</p>
+            <ul>
+                <li>Volunteer Coordinator/Systems advisor for a horticultural therapy farm</li>
+                <li>Culinary instructor for a middle school</li>
+                <li>Scout leader</li>
+            </ul>
+            <p>I decided in 2010 to return to college for another Bachelor&#39s degree to update my skills and 
+                learn new skills. Learning Web tools and .Net has been good for me to continue with projects 
+                since then. I have learned C# and have really expanded my experience with SQL. Technologies 
+                I have used since then include:</p>
+            <p>Languages</p>
+            <ul>
                 <li>COBOL</li>
                 <li>C#.Net</li>
                 <li>VB</li>
@@ -56,21 +90,31 @@
                 <li>Javascript</li>
                 <li>Html/Css</li>
             </ul>
-            <ul>Databases
+            <p>Databases -</p>
+            <ul>
                 <li>SQL Server/DB2</li>
                 <li>Advanced queries</li>
                 <li>Schema design</li>
                 <li>Stored Procedures</li>
                 <li>SSRS</li>
             </ul>
-            <ul>Web Design/Image design
+            <p>I continue using my photography to document recipes and cooking methods, and have enjoyed 
+                landscape and close-up work. This came in handy to document culinary prep. Originally I had 
+                a dark room but now my dark room is my computer using Photoshop where I can be even more 
+                creative. These skills are very useful when I do Web design. </p>
+            <p>My Web and Image design include:</p>
+            <ul>
                 <li>Web design using Dreamweaver , Visual Studio and other tools</li>
                 <li>Web images produced using Photoshop, Gimp, Fireworks, and Illustrator</li>
                 <li>Web functionality produced using javascript, perl, and jquery.</li>
             </ul>
+            <p>I love to create, either with graphics, computer project design and coding or 
+                with culinary dietary design. I appreciate a well-designed project that is tested well 
+                and is clearly readable.</p>
  
-            If you wish to contact me with feedback or would like a complete resume,
-            I can be reached at <a href="mailto:ppettersen26@gmail.com">ppettersen26@gmail.com</a>
+            <p>If you wish to contact me with feedback or would like a complete resume,
+            I can be reached at <a href="mailto:ppettersen26@gmail.com">ppettersen26@gmail.com</a></p>
+            <div class="about-bar">Thank you for visiting.</div>
         </div>
     </div>   
         <div class="centerimg">
