--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
             </ul>
             <p>I love to create, either with graphics, computer project design and coding or 
                 with culinary dietary design. I appreciate a well-designed project that is tested well 
-                and is clearly readable.</p>
+                and a responsive design.</p>
  
             <p>If you wish to contact me with feedback or would like a complete resume,
             I can be reached at <a href="mailto:ppettersen26@gmail.com">ppettersen26@gmail.com</a></p>
