--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
        </div>     
     </header>
 
-    <div class="brand">A bit more about me.</div>
+    <div class="brand">About me.</div>
     <!--<div class="about-bar">I love creating and coding!</div>
     <div class="more">
         <a class="read-now-link" href="#more">read more</a>
@@ -54,10 +54,10 @@
             <p>While working on my first bachelor&#39s degree in computer science, I was doing a lot of 
                 landscape photography, team pictures and even wedding photography. I did not just program 
                 at Allstate either. I started training under a professional chef in Chicago, Cleatis Wilcox, 
-                the first certified female chef in the Midwest. Cooking must be in my blood! My family even 
+                the first certified female chef in the Midwest. Cooking must be in my blood too! My family 
                 includes a chef who worked at the American Embassy in Oslo, Norway! After marrying I moved to 
                 Michigan where I cooked professionally and also did IT consulting work. </p>
-            <p>My experience as a chef included:</p>
+            <p>My roles as a chef included:</p>
             <ul>
                 <li>Baker</li>
                 <li>Line Cook in a resort area</li>
@@ -65,23 +65,23 @@
                 <li>Sous Chef for a retirement home (Kitchen manager)</li>
                 <li>Recipes developed for special dietary needs.</li>
             </ul>
-            <p>Computers were never far from my mind either. I worked on methods of storing my vast library
-                 of recipes. I also needed ways to calculate portions and nutritional values because of 
+            <p>Computers were never far from my mind either. I worked on storage methods for my vast 
+                library of recipes. I createdd ways to calculate portions and nutritional values because of 
                 special dietary needs. A lot of my work was done with Visual Basic, stand-alone apps through 
                 Excel macros. In the kitchen I worked on inventory, scheduling and ordering systems. 
-                I also helped set up a network for a medical practice and a database for a local horticultural
-                 therapy farm where I was their volunteer coordinator.</p>
+                Other consulting work I did was set up a network for a medical practice and a database for a local 
+                horticultural therapy farm where I was their volunteer coordinator.</p>
             <p>My volunteer activities included:</p>
             <ul>
                 <li>Volunteer Coordinator/Systems advisor for a horticultural therapy farm</li>
                 <li>Culinary instructor for a middle school</li>
                 <li>Scout leader</li>
             </ul>
-            <p>I decided in 2010 to return to college for another Bachelor&#39s degree to update my skills and 
-                learn new skills. Learning Web tools and .Net has been good for me to continue with projects 
-                since then. I have learned C# and have really expanded my experience with SQL. Technologies 
-                I have used since then include:</p>
-            <p>Languages</p>
+            <p>In 2010 I decided to return to college for another Bachelor&#39s degree. I wanted to update my skills 
+                and learn new skills. Learning Web tools and .Net has been good for me to continue with projects 
+                since then. I have learned C# and have really expanded my experience with SQL.</p> 
+                
+            <p>Technologies I have used since then include:</p>            
             <ul>
                 <li>COBOL</li>
                 <li>C#.Net</li>
@@ -90,7 +90,7 @@
                 <li>Javascript</li>
                 <li>Html/Css</li>
             </ul>
-            <p>Databases -</p>
+            <p>Database work included:</p>
             <ul>
                 <li>SQL Server/DB2</li>
                 <li>Advanced queries</li>
@@ -99,13 +99,13 @@
                 <li>SSRS</li>
             </ul>
             <p>I continue using my photography to document recipes and cooking methods, and have enjoyed 
-                landscape and close-up work. This came in handy to document culinary prep. Originally I had 
-                a dark room but now my dark room is my computer using Photoshop where I can be even more 
-                creative. These skills are very useful when I do Web design. </p>
+                landscape and close-up work. This came in handy to document culinary prep and in Web design. 
+                Originally I had a dark room but now my dark room is my computer using Photoshop where I can be 
+                even more creative.</p>
             <p>My Web and Image design include:</p>
             <ul>
                 <li>Web design using Dreamweaver , Visual Studio and other tools</li>
-                <li>Web images produced using Photoshop, Gimp, Fireworks, and Illustrator</li>
+                <li>Web images produced using Photoshop, Gimp, Fireworks, Flash, and Illustrator</li>
                 <li>Web functionality produced using javascript, perl, and jquery.</li>
             </ul>
             <p>I love to create, either with graphics, computer project design and coding or 
