--- a/index.html
+++ b/index.html
@@ -47,29 +47,29 @@
                         and I love to create. </strong>
                 </h2>
                 <hr>
-                <p>I am an experienced IT professional who loves to create well designed software and
-                   Web designs. I do not only create with a computer, I am also an experienced chef and 
+                <p>I am an experienced IT professional who loves to create well designed Web and software
+                   designs. I do not only create with a computer, I am also an experienced chef and 
                     have worked as a freelance photographer. I have many interests, but I’m never very far 
-                    from one of these three.
+                    from any of these.
                 </p>
                 <p class="centerimg">
                     <img src="img/Chef.png" alt="Chef" />
                 </p>
-                <p>I love to solve problems and have worked on a variety of projects such as solving a 
-                    customer’s database design, created an inventory system for a commercial kitchen, 
-                    customizing recipes for special diets, and photo illustrating a culinary recipe database 
-                    system. I love to design solutions to save work and sites that work well and are easy to 
-                    see with any type of device. I also use my photography for landscapes, culinary 
-                    illustration, and my own creation from Photoshop.</p>
+                <p>I have worked on a variety of projects such as solving a customer’s database design,
+                    created an inventory system for a commercial kitchen, customizing recipes 
+                    for special diets, and photo illustrating a culinary recipe database 
+                    system. I love to solve problems, design worksaving solutions, and sites that work
+                    well and are a responsive design. I also use my photography for landscapes, culinary
+                    illustration, and my own creations from Photoshop.</p>
                 <p class="centerimg">
                     <img src="img/Dead river.png" alt="River" />
                     <img src="img/Pancakes.jpg" alt="Pancakes" />
                 </p>
-                <p><a href="https://www.linkedin.com/in/ppettersen26">LinkedIn</a> profiles a good part 
-                    of my IT career, <a href="https://500px.com/paulpettersen">500PX</a> has a sample of 
-                    my photography (still working on that!) Please browse my Web Portfolio and please 
-                    feel free to send me comments or ask me for any other information. The 
-                    <a href="about.html">about</a> page will provide more about me including contact 
+                <p>My IT career is profiled on <a href="https://www.linkedin.com/in/ppettersen26">LinkedIn</a>
+                    , <a href="https://500px.com/paulpettersen">500PX</a> has a sample of 
+                    my photography (still working on that!) Please browse my Web Portfolio. The 
+                    <a href="about.html">about</a> page provides more detailed information about me including
+                    contact information. Please feel free to send me comments or ask me for any other 
                     information. </p>
                 <div class="about-bar">Thank you for visiting. </div>
             </div>
