--- a/work.html
+++ b/work.html
@@ -42,29 +42,38 @@
             <div class="col-lg-12">
                 <hr>
                     <h2 class="intro-text">
-                        <strong>A number of projects I have completed.</strong>
+                        <strong>Projects I am working on.</strong>
+                    </h2>
+                <hr>
+                <p>Cooks</p>   
+                    <div class ="Projectthumb">
+                        <img src="img/Cooks.PNG" alt="Wood Bytes" />
+                    </div>               
+                <hr>
+                    <h2 class="intro-text">
+                        <strong>Other projects I have completed.</strong>
                     </h2>
                 <hr>
                 <p>WoodBytes</p>
-                <p class ="centerimg">
+                <div class ="Projectthumb">
                     <img src="img/WoodBytes.PNG" alt="Wood Bytes" />
-                </p>
+                </div> 
                 <p>A Flash Video of my fathers experience in the war.</p>
-                <p class ="centerimg">
+                <div class ="Projectthumb">
                     <img src="img/Flash movie.PNG" alt="Flash Video"  />
-                </p>
+                </div> 
                 <p>An herbal blend site.</p>
-                <p class ="centerimg">
+                <div class ="Projectthumb">
                     <img src="img/Cooking with Herbs.PNG" alt="Cooking with Herb Site" />
-                </p>                
+                </div>               
                 <p>A woodworkers site.</p>
-                <p class ="centerimg">
+                <div class ="Projectthumb">
                     <img src="img/Woodworking for everyone.PNG" alt="Woodworking Site" />
-                </p>                
+                </div>                 
                 <p>The same wood workers site with added Perl functionality</p>
-                <p class ="centerimg">
+                <div class ="Projectthumb">
                     <img src="img/Woodworking for everyone with Perl.PNG" alt="Woodworking with Perl" />                     
-                </p>
+                </div> 
 
             </div>             
 
