Added new tab for clicked website.

--- a/work.html
+++ b/work.html
@@ -47,7 +47,7 @@
                 <hr>
                 <p>Cooks</p>   
                     <div class ="Projectthumb">
-                        <img src="img/Cooks.PNG" alt="Wood Bytes" />
+                        <a href="Cooks.html" target="_blank"><img src="img/Cooks.PNG" alt="Wood Bytes" /></a>
                     </div>               
                 <hr>
                     <h2 class="intro-text">
